Trying to fix overflow issue when width is reduced again.

--- a/style.css
+++ b/style.css
@@ -60,13 +60,14 @@ body{
 
 
 .menu{
-    width: fit-content;
+    width: 100%;
     list-style: none;
     color: antiquewhite;
     display: flex;
     border-bottom-style: solid;
     border-bottom-right-radius: 4px;
     border-bottom-color: black;
+    overflow: auto;
 }
 
 .menu li{
@@ -120,7 +121,7 @@ h1{
     margin: 15px;
     margin-left: auto; margin-right: auto;
     padding: 15px;
-    font-size: 2vw;
+    font-size: 1em;
     text-align: center;
     color: antiquewhite;
     background-color: rgba(16, 16, 17, 0.9);
